# framework

./: .gitignore  CMakeLists.txt  README.md
examples/smoothness-test/: campedelli.sing  quadric.sing
examples/wait-all-first/: gspccomputestd.lib  gspcmodstd.lib
parallel/: CMakeLists.txt  config.hpp  implementation.cpp  singular_functions.cpp  singular_functions.hpp
parallel/LIB/: parallelgspc.lib
share/include/: interface.hpp  smoothness_interface.hpp  waitallfirst_interface.hpp
smoothness/: CMakeLists.txt  config.hpp  implementation.cpp  singular_commands.cpp  singular_commands.hpp
smoothness/LIB/: smoothtestgspc.lib
smoothness/cmake/modules/: FindSingular.cmake
src/: CMakeLists.txt  installation.cpp  installation.hpp  installation.hpp.in
workflow/: CMakeLists.txt  parallel_all.xpnet  parallel_first.xpnet  smoothness.xpnet
